--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="background">
+        <h2 id="score">0</h2>
         <div id="grid">
             <div class="bird"></div>
         </div>
